<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.search.SearchFragment">
    <TextView
        android:id="@+id/searchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/search"
        android:fontFamily="@font/bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/defaultTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/searchFragmentCard"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:elevation="1dp"
        android:padding="3dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/searchTitle"
        app:layout_constraintTop_toBottomOf="@+id/searchTitle">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchFragmentSearchView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            app:iconifiedByDefault="false"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/search_movie" />
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchFragmentCard" />

    <TextView
        android:id="@+id/noMovieFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noMovieFound"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchRecyclerView" />
</androidx.constraintlayout.widget.ConstraintLayout>