<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.movies.MovieActivity">

        <ImageView
            android:id="@+id/backgroundImageView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/background_image"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            android:transitionName="example_transition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/downloadMovieButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="-16dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@+id/backgroundImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_file_download" />

        <LinearLayout
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/darkBackground"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backgroundImageView">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/bold"
                android:textColor="@color/defaultTextColor"
                android:textFontWeight="900"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/genreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/defaultTextColor"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ratingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/defaultTextColor"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/overviewTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:textAlignment="textStart"
                android:textColor="@color/defaultTextColor"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/YOPTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/yop" />

            <TextView
                android:id="@+id/runtimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/runtime" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
